[gd_scene load_steps=11 format=2]

[ext_resource path="res://GameObjects/Character/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://GameObjects/Character/Player/Animation/LookRight.tres" type="Animation" id=2]
[ext_resource path="res://GameObjects/Character/Player/Animation/LookForward.tres" type="Animation" id=3]
[ext_resource path="res://GameObjects/Character/Player/Animation/LookLeft.tres" type="Animation" id=4]
[ext_resource path="res://GameObjects/Character/Player/Animation/RESET.tres" type="Animation" id=5]
[ext_resource path="res://GameObjects/Character/Player/Textures/PlayerSpriteSheet.png" type="Texture" id=6]
[ext_resource path="res://GameObjects/Character/Player/Sounds/PlayerWalking.wav" type="AudioStream" id=7]
[ext_resource path="res://GameObjects/Character/Player/Animation/LookBackward.tres" type="Animation" id=8]
[ext_resource path="res://GameObjects/Character/Player/Sounds/PlayerUndoWalk.wav" type="AudioStream" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="Player" type="KinematicBody2D"]
z_index = 1
collision_layer = 2
collision_mask = 5
script = ExtResource( 1 )

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 6 )
hframes = 9

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 5
collide_with_areas = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
autoplay = "LookBackward"
anims/LookBackward = ExtResource( 8 )
anims/LookForward = ExtResource( 3 )
anims/LookLeft = ExtResource( 4 )
anims/LookRight = ExtResource( 2 )
anims/RESET = ExtResource( 5 )

[node name="SFX" type="Node" parent="."]

[node name="WalkSFX" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 7 )
bus = "SFX"

[node name="UndoWalkSFX" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 9 )
bus = "SFX"

[node name="Tween" type="Tween" parent="."]

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
